test_yuriiq/catalog/language/german/account/forgotten.php
<?php

// text
$_['text_account']	= 'Konto';
$_['text_forgotten']	= 'Passwort vergessen';
$_['text_success']	= 'Ein neues Passwort wurde gesendet.';
$_['text_email']	= 'Bitte die dem Konto zugeordnete Emailadresse eintragen und mit Klick auf "Weiter" bestätigen. Es wird dann umgehend ein neues Passwort an diese Emailadresse gesendet.';
$_['text_your_email']	= 'Meine Emailadresse';

// error
$_['error_email']	= 'Diese Emailadresse wurde nicht in unserer Datenbank gefunden. Bitte Vorgang wiederholen oder ein neues Konto anlegen!';

// entry
$_['entry_email']	= 'Emailadresse:';

// heading
$_['heading_title']	= 'Passwort vergessen ?';
?>